objects/Account_Plan_Attachment__c.object
<CustomObject>
    <description>This object is used to link attachment to the Account Plan.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Master Detail Relation to Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Attachments</relationshipLabel>
        <relationshipName>Account_Plan_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <description>This field contains the attachment Id.</description>
        <label>AttachmentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>This field contains the Author name.</description>
        <label>Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>This field contains the content type.</description>
        <label>Content Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field contains the attachment description.</description>
        <label>Description</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Attachment_to_Executive_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the related attachment will be send to Executive Dashboard.</description>
        <label>Send Attachment to Executive Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_File__c</fullName>
        <formula>&quot;c2s.my.salesforce.com/&quot; &amp; AttachmentId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View File</label>
        <type>Text</type>
    </fields>
    <label>Account Plan Attachment</label>
    <nameField>
        <label>Account Plan Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>